# haskell

./: LICENSE
hw1-RomaA2000/: hw1.cabal
hw1-RomaA2000/src/: Block1_1.hs  Block1_2.hs  Block1_3and2_1.hs  Block2_2.hs  Block3_1.hs  Block3_2.hs
hw1-RomaA2000/test/: Block1_1Spec.hs  Block1_2PropSpec.hs  Block1_2Spec.hs  Block1_3and2_1Spec.hs  Block2_1PropSpec.hs  Block2_2PropSpec.hs  Block2_2Spec.hs  Block3_1Spec.hs  Block3_2Spec.hs  Main.hs
hw2-RomaA2000/: hw2.cabal  stack.yaml
hw2-RomaA2000/src/: Block1_1.hs  Block1_2.hs  Block1_3.hs  Block2_1.hs  Block2_2.hs  Block3_1.hs  Block3_2.hs  Block3_3.hs  Block3_4.hs
hw2-RomaA2000/test/: Block1_1PropSpec.hs  Block1_1Spec.hs  Block2_1Spec.hs  Block3Spec.hs  Main.hs
hw3-RomaA2000/: LICENSE  hw3.cabal
hw3-RomaA2000/app/: Main.hs
hw3-RomaA2000/src/: DirClasses.hs  FSInterface.hs  Utils.hs
hw3-RomaA2000/test/: Block1_1Spec.hs  Main.hs
hw4-RomaA2000/: hw4.cabal
hw4-RomaA2000/app/: Main.hs
hw4-RomaA2000/bench/: Main.hs  Task1Bench.hs  Task2Bench.hs
hw4-RomaA2000/src/: Task1Norm.hs  Task1Perf.hs  Task2.hs  Task6.hs  Task7.hs  Task8.hs
hw4-RomaA2000/test/: Main.hs  Task1Spec.hs  Task2Spec.hs  Task7Spec.hs
