name:                hw3
version:             0.0.0.0
synopsis:            hw3
description:         hw3

homepage:            https://github.com/RomaA2000
license:             MIT
license-file:        LICENSE
author:              Roman Ageev
maintainer:          ageevroma200@gmail.com
copyright:           2020 Roman Ageev

category:            Func
build-type:          Simple
extra-source-files:  License
cabal-version:       >=1.10
tested-with:         GHC == 8.6.5

library
  hs-source-dirs:      src
  exposed-modules:     DirClasses, Utils, FSInterface
  ghc-options:         -Wno-missing-home-modules -Wall -XLambdaCase -Wmissing-methods
  extensions:          InstanceSigs
  build-depends:       base >= 4.9 && < 5, mtl, filepath, directory, lifted-base, containers
  default-language:    Haskell2010

executable hw3-exe
  main-is: Main.hs
  other-modules:
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base >=4.7 && <5, hw3, text, hspec, hedgehog, tasty, tasty-hspec, tasty-hedgehog, mtl, QuickCheck, lifted-base, containers, optparse-applicative, directory
  default-language: Haskell2010

test-suite hw3-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Block1_1Spec
  ghc-options:         -Wno-missing-home-modules -threaded -rtsopts -with-rtsopts=-N -XLambdaCase
  extensions:          InstanceSigs
  build-depends:       base, hw3, hspec, hedgehog, tasty, tasty-hspec, tasty-hedgehog, mtl, QuickCheck, lifted-base, containers, directory
  default-language:    Haskell2010